// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationInline styles should render notification inline with alert styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-danger);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-danger);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

.circuit-5 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.988 1A10.994 10.994 0 1 0 12 1h-.012zm4.71 14.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29l-3.29-3.29-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71l3.29-3.29-3.29-3.29a1.013 1.013 0 0 1-.29-.71 1 1 0 0 1 1-1c.266 0 .52.104.71.29l3.29 3.29 3.29-3.29c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.408 12l3.29 3.29z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="circuit-5"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline styles should render notification inline with confirm styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-success);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-success);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

.circuit-5 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.988 1A10.994 10.994 0 1 0 12 1h-.012zm5.77 7.64-7 8a1.008 1.008 0 0 1-1.48.07l-3-3a1.013 1.013 0 0 1-.29-.71 1 1 0 0 1 1-1c.266 0 .52.104.71.29l2.22 2.23 6.3-7.16a1 1 0 1 1 1.54 1.28z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="circuit-5"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline styles should render notification inline with danger styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-danger);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-danger);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

.circuit-5 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.988 1A10.994 10.994 0 1 0 12 1h-.012zm4.71 14.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29l-3.29-3.29-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71l3.29-3.29-3.29-3.29a1.013 1.013 0 0 1-.29-.71 1 1 0 0 1 1-1c.266 0 .52.104.71.29l3.29 3.29 3.29-3.29c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.408 12l3.29 3.29z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="circuit-5"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline styles should render notification inline with info styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-accent);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-accent);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

.circuit-5 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22.988a10.994 10.994 0 1 0-.012 0H12zm1-6a1 1 0 0 1-2 0v-5a1 1 0 0 1 2 0v5zm-1-11a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="circuit-5"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline styles should render notification inline with notify styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-warning);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-warning);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

.circuit-5 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M14.544 3.481c-1.13-1.975-3.958-1.975-5.088 0L1.398 17.556C.268 19.53 1.681 22 3.942 22h16.116c2.261 0 3.675-2.47 2.544-4.444L14.544 3.48zM11 8a1 1 0 0 1 2 0v5a1 1 0 0 1-2 0V8zm1 11a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="circuit-5"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline styles should render notification inline with success styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-success);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-success);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

.circuit-5 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.988 1A10.994 10.994 0 1 0 12 1h-.012zm5.77 7.64-7 8a1.008 1.008 0 0 1-1.48.07l-3-3a1.013 1.013 0 0 1-.29-.71 1 1 0 0 1 1-1c.266 0 .52.104.71.29l2.22 2.23 6.3-7.16a1 1 0 1 1 1.54 1.28z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="circuit-5"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline styles should render notification inline with warning styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-warning);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-warning);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

.circuit-5 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M14.544 3.481c-1.13-1.975-3.958-1.975-5.088 0L1.398 17.556C.268 19.53 1.681 22 3.942 22h16.116c2.261 0 3.675-2.47 2.544-4.444L14.544 3.48zM11 8a1 1 0 0 1 2 0v5a1 1 0 0 1-2 0V8zm1 11a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="circuit-5"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline styles should render notification toast with an action button 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-accent);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-accent);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

.circuit-5 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  padding: calc(4px - 1px) calc(16px - 1px);
  background-color: transparent;
  border-color: transparent;
  color: var(--cui-fg-accent);
  padding-left: 0;
  padding-right: 0;
  position: relative;
  overflow: hidden;
  font-weight: bold;
  text-decoration-line: underline;
  color: var(--cui-fg-normal);
  margin-top: 8px;
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  pointer-events: none;
}

.circuit-6:hover {
  color: var(--cui-fg-accent-hovered);
  background-color: transparent;
  border-color: transparent;
}

.circuit-6:active,
.circuit-6[aria-expanded='true'],
.circuit-6[aria-pressed='true'] {
  color: var(--cui-fg-accent-pressed);
  background-color: transparent;
  border-color: transparent;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  color: var(--cui-fg-accent-disabled);
  background-color: transparent;
  border-color: transparent;
}

.circuit-6:hover {
  color: var(--cui-fg-normal-hovered);
}

.circuit-6:active,
.circuit-6[aria-expanded='true'],
.circuit-6[aria-pressed='true'] {
  color: var(--cui-fg-normal-pressed);
}

.circuit-7 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22.988a10.994 10.994 0 1 0-.012 0H12zm1-6a1 1 0 0 1-2 0v-5a1 1 0 0 1 2 0v5zm-1-11a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="circuit-5"
          >
            This is an inline message
          </p>
          <button
            class="circuit-6"
          >
            <span
              class="circuit-7"
            >
              <span
                class="circuit-3"
              />
            </span>
            <span
              class="circuit-9"
            >
              Click here
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline styles should render notification toast with multiple actions buttons 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-accent);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-accent);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

.circuit-5 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin-top: 8px;
}

@media (min-width: 480px) {
  .circuit-6 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: end;
    -ms-flex-pack: end;
    -webkit-justify-content: flex-end;
    justify-content: flex-end;
  }
}

.circuit-7 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: var(--cui-bg-accent-strong);
  border-color: transparent;
  color: var(--cui-fg-on-strong);
  padding: calc(4px - 1px) calc(16px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  pointer-events: none;
}

.circuit-7:hover {
  background-color: var(--cui-bg-accent-strong-hovered);
  border-color: transparent;
  color: var(--cui-fg-on-strong-hovered);
}

.circuit-7:active,
.circuit-7[aria-expanded='true'],
.circuit-7[aria-pressed='true'] {
  background-color: var(--cui-bg-accent-strong-pressed);
  border-color: transparent;
  color: var(--cui-fg-on-strong-pressed);
}

.circuit-7:disabled,
.circuit-7[disabled] {
  background-color: var(--cui-bg-accent-strong-disabled);
  border-color: transparent;
  color: var(--cui-fg-on-strong-disabled);
}

.circuit-8 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-11 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: var(--cui-bg-accent-strong);
  border-color: transparent;
  color: var(--cui-fg-on-strong);
  padding: calc(4px - 1px) calc(16px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-11:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-11:focus::-moz-focus-inner {
  border: 0;
}

.circuit-11:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-11:disabled,
.circuit-11[disabled] {
  pointer-events: none;
}

.circuit-11:hover {
  background-color: var(--cui-bg-accent-strong-hovered);
  border-color: transparent;
  color: var(--cui-fg-on-strong-hovered);
}

.circuit-11:active,
.circuit-11[aria-expanded='true'],
.circuit-11[aria-pressed='true'] {
  background-color: var(--cui-bg-accent-strong-pressed);
  border-color: transparent;
  color: var(--cui-fg-on-strong-pressed);
}

.circuit-11:disabled,
.circuit-11[disabled] {
  background-color: var(--cui-bg-accent-strong-disabled);
  border-color: transparent;
  color: var(--cui-fg-on-strong-disabled);
}

@media (min-width: 480px) {
  .circuit-11 {
    margin-right: 16px;
    background-color: var(--cui-bg-normal);
    border-color: var(--cui-border-normal);
    color: var(--cui-fg-normal);
  }

  .circuit-11:hover {
    background-color: var(--cui-bg-normal-hovered);
    border-color: var(--cui-border-normal-hovered);
    color: var(--cui-fg-normal-hovered);
  }

  .circuit-11:active,
  .circuit-11[aria-expanded='true'],
  .circuit-11[aria-pressed='true'] {
    background-color: var(--cui-bg-normal-pressed);
    border-color: var(--cui-border-normal-pressed);
    color: var(--cui-fg-normal-pressed);
  }

  .circuit-11:disabled,
  .circuit-11[disabled] {
    background-color: var(--cui-bg-normal-disabled);
    border-color: var(--cui-border-normal-disabled);
    color: var(--cui-fg-normal-disabled);
  }
}

@media (max-width: 479px) {
  .circuit-11 {
    margin-right: 0;
    margin-top: 16px;
    background-color: transparent;
    border-color: transparent;
    color: var(--cui-fg-accent);
    padding-left: 0;
    padding-right: 0;
  }

  .circuit-11:hover {
    color: var(--cui-fg-accent-hovered);
    background-color: transparent;
    border-color: transparent;
  }

  .circuit-11:active,
  .circuit-11[aria-expanded='true'],
  .circuit-11[aria-pressed='true'] {
    color: var(--cui-fg-accent-pressed);
    background-color: transparent;
    border-color: transparent;
  }

  .circuit-11:disabled,
  .circuit-11[disabled] {
    color: var(--cui-fg-accent-disabled);
    background-color: transparent;
    border-color: transparent;
  }
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22.988a10.994 10.994 0 1 0-.012 0H12zm1-6a1 1 0 0 1-2 0v-5a1 1 0 0 1 2 0v5zm-1-11a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="circuit-5"
          >
            This is an inline message
          </p>
          <div
            class="circuit-6"
          >
            <button
              class="circuit-7"
            >
              <span
                class="circuit-8"
              >
                <span
                  class="circuit-3"
                />
              </span>
              <span
                class="circuit-10"
              >
                First action
              </span>
            </button>
            <button
              class="circuit-11"
            >
              <span
                class="circuit-8"
              >
                <span
                  class="circuit-3"
                />
              </span>
              <span
                class="circuit-10"
              >
                Second Action
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline styles should render with default styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-accent);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-accent);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

.circuit-5 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22.988a10.994 10.994 0 1 0-.012 0H12zm1-6a1 1 0 0 1-2 0v-5a1 1 0 0 1 2 0v5zm-1-11a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="circuit-5"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;
